Fix alignment for networks page

--- a/app/assets/stylesheets/network.css.scss
+++ b/app/assets/stylesheets/network.css.scss
@@ -1,3 +1,9 @@
 .network {
   margin-left: 100px;
 }
+
+.follows {
+  h4 {
+    text-decoration: underline;
+  }
+}
